commit that stuff.

--- a/sources.conf
+++ b/sources.conf
@@ -1,2 +1,6 @@
+# Welcome to the sources document.
+# s@ is reserved for sources and version text documents.
+# The helloworld entry inside this application. Only comment with hashtags.
 walteros-linux-helloworld
-https://github.com/tuxisawesome/WalterOS-Linux-Helloworld
+s@https://github.com/tuxisawesome/WalterOS-Linux-Helloworld
+s@https://raw.githubusercontent.com/tuxisawesome/WalterOS-Linux-Helloworld/master/version.txt
