--- a/sources.conf
+++ b/sources.conf
@@ -1,6 +1,12 @@
 # Welcome to the sources document.
 # s@ is reserved for sources and version text documents.
+# Also, don't leave any whitespace.
 # The helloworld entry inside this application. Only comment with hashtags.
+# walteros-linux-helloworld
 walteros-linux-helloworld
 s@https://github.com/tuxisawesome/WalterOS-Linux-Helloworld
 s@https://raw.githubusercontent.com/tuxisawesome/WalterOS-Linux-Helloworld/master/version.txt
+# walteros-linux-miniapps
+walteros-linux-miniapps
+s@https://github.com/tuxisawesome/WalterOS-Linux-Miniapps
+s@https://raw.githubusercontent.com/tuxisawesome/WalterOS-Linux-Miniapps/master/version.txt
