--- a/sources.conf
+++ b/sources.conf
@@ -10,3 +10,7 @@ s@https://raw.githubusercontent.com/tuxisawesome/WalterOS-Linux-Helloworld/maste
 walteros-linux-miniapps
 s@https://github.com/tuxisawesome/WalterOS-Linux-Miniapps
 s@https://raw.githubusercontent.com/tuxisawesome/WalterOS-Linux-Miniapps/master/version.txt
+# walteros-linux-freeform
+walteros-linux-freeform
+s@https://github.com/tuxisawesome/WalterOS-Linux-Freeform
+s@https://raw.githubusercontent.com/tuxisawesome/WalterOS-Linux-Freeform/master/version.txt
