--- a/sources.conf
+++ b/sources.conf
@@ -14,3 +14,7 @@ s@https://raw.githubusercontent.com/tuxisawesome/WalterOS-Linux-Miniapps/master/
 walteros-linux-freeform
 s@https://github.com/tuxisawesome/WalterOS-Linux-Freeform
 s@https://raw.githubusercontent.com/tuxisawesome/WalterOS-Linux-Freeform/master/version.txt
+# walteros-POS
+walteros_pos
+s@https://github.com/tuxisawesome/WalterOS_POS
+s@https://raw.githubusercontent.com/tuxisawesome/WalterOS_POS/main/version.txt
